# ultra-lottery-helper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  =1.0.0  =4.1.2  AI_SYSTEM_STATUS.md  CHANGELOG.md  CMakeLists.txt  DATA_FETCHER_README.md  DOCKER_CMAKE_README.md  Dockerfile  EULA.rtf  EULA.txt  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LICENSE.txt  LOTTERY_RESULTS_SOURCES.md  Makefile  PREDICTION_TRACKER_README.md  PROJECT_ANALYSIS.md  PR_SUMMARY.md  README.el.md  README.md  README.orig.20250907_180204.md  README_CI.md  README_SIGNING.md  RELEASE-CHECKLIST.md  SCHEDULER_README.md  SECURITY_FEATURES.md  SECURITY_SUMMARY.md  SETUP.md  TASK_COMPLETION_SUMMARY.md  build_installer.bat  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  ultra_lottery_helper.iss
.github/workflows/: build-sign-release.yml  build-windows-installer.yaml  ci.yaml  codeql.yml  dependency-scan.yml  release-checklist.yml  run-lottery.yml
assets/: ASSETS_README.md
assets/flags/: README.md
assets/lottery_icons/: README.md
data/history/: README.md
data/history/australia_powerball/: example_draws.csv
data/history/eurojackpot/: Eurojackpot_2025.xlsx
data/history/loto_france/: example_draws.csv
data/history/lotto/: lotto_1990.xlsx  lotto_1991.xlsx  lotto_1992.xlsx  lotto_1993.xlsx  lotto_1994.xlsx  lotto_1995.xlsx  lotto_1996.xlsx  lotto_1997.xlsx  lotto_1998.xlsx  lotto_1999.xlsx  lotto_2000.xlsx  lotto_2001.xlsx  lotto_2002.xlsx  lotto_2003.xlsx  lotto_2004.xlsx  lotto_2005.xlsx  lotto_2006.xlsx  lotto_2007.xlsx  lotto_2008.xlsx  lotto_2009.xlsx  lotto_2009_NEW.xlsx  lotto_2010_NEW.xlsx  lotto_2011.xlsx  lotto_2012.xlsx  lotto_2013.xlsx  lotto_2014.xlsx  lotto_2015.xlsx  lotto_2016.xlsx  lotto_2017.xlsx  lotto_2018.xlsx  lotto_2019.xlsx  lotto_2020.xlsx  lotto_2021.xlsx  lotto_2022.xlsx  lotto_2024.xlsx  lotto_2025.xlsx
data/history/superenalotto/: example_draws.csv
data/history/tzoker/: Joker_1997.xlsx  Joker_1998.xlsx  Joker_1999.xlsx  Joker_2000.xlsx  Joker_2001.xlsx  Joker_2002.xlsx  Joker_2003.xlsx  Joker_2004.xlsx  Joker_2005.xlsx  Joker_2006.xlsx  Joker_2007.xlsx  Joker_2008.xlsx  Joker_2022.xlsx  Joker_2023.xlsx  Joker_2024.xlsx  Joker_2025.xlsx
data/history/uk_national_lottery/: example_draws.csv
data/history/us_mega_millions/: example_draws.csv
data/history/us_powerball/: example_draws.csv
data/learning/: model_state.json  ulh_learning.sqlite
deploy/cloud/: kubernetes.yaml
docs/: DOCKER_CMAKE_README.md  LOTTERY_RESULTS_SOURCES.md  README_SIGNING.md  SECURITY_SUMMARY.md
examples/: colab_setup_snippet.txt  prize_tiers_example.json
scripts/: build_and_sign.ps1  bump_installer_name.ps1  bump_version.ps1  check_dependencies.py  detect_version.ps1  sign-all.ps1
src/: __init__.py  __version__.py  advanced_models.py  config.py  lottery_data_fetcher.py  lottery_scheduler.py  prediction_tracker.py  ulh_desktop.py  ulh_desktop.py.bak  ulh_learn_cli.py  ulh_learning.py  ulh_learning.py.backup  ultra_lottery_helper.py  utils.py  web_dashboard.py
src/data/history/tzoker/: fetched_20260119_191413.csv  fetched_20260119_191608.csv  fetched_20260119_191824.csv  fetched_20260119_194622.csv
tests/: conftest.py  test_advanced_models.py  test_core_logic.py  test_data_fetcher.py  test_data_loading.py  test_european_lotteries.py  test_import.py  test_import_desktop.py  test_learning_system.py  test_non_european_lotteries.py  test_prediction_tracker.py  test_scheduler.py  test_web_dashboard.py
