[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["ultra_lottery_helper", "ulh_desktop", "ulh_learning", "ulh_learn_cli"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B101", "B601"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle-lottery-predictor"
version = "6.3.0"
description = "Offline lottery analysis and prediction tool supporting TZOKER, LOTTO, and EuroJackpot"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Tsoympet", email = "194965140+Tsoympet@users.noreply.github.com"}
]
keywords = ["lottery", "prediction", "analysis", "ml", "statistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "PySide6>=6.0.0",
    "requests>=2.25.0",
    "filelock>=3.19.1",
    "marshmallow>=4.0.1,<4.1.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.0.0",
    "lightgbm>=3.3.0",
    "xgboost>=1.5.0",
    "prophet>=1.0.0",
]
dev = [
    "safety>=2.3.0",
    "bandit[toml]>=1.7.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Tsoympet/ultra-lottery-helper"
Documentation = "https://github.com/Tsoympet/ultra-lottery-helper/blob/main/README.md"
Repository = "https://github.com/Tsoympet/ultra-lottery-helper"
Issues = "https://github.com/Tsoympet/ultra-lottery-helper/issues"

[project.scripts]
oracle-lottery = "src.ulh_desktop:main"
oracle-lottery-learn = "src.ulh_learn_cli:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["**/*.csv", "**/*.json", "**/*.txt"]
